--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="function-calling">function-calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(3)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(3)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(2)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(3)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(3)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -189,7 +189,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704650858606" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html"> <img src="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistant.png" class="thumbnail-image"> </a></p>
 </div>
@@ -218,7 +218,7 @@ openai_assistants_api
 </div>
 <a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html">
 <div class="listing-description">
-Welcome to our comprehensive guide on leveraging function calling in the OpenAI…
+<p>Discover how to leverage function calling in the OpenAI Assistant API with our comprehensive guide. This tutorial, suitable for both seasoned developers and beginners, covers the basics of function calling, creating an assistant, initiating a thread, and more. Learn how to identify when a message requires a function call, determine which function to call and what arguments to pass, and retrieve the response from a function call. We illustrate these concepts with a simple demo of reversing a string using a function integrated with the assistant. Enhance your AI applications with a clear, practical understanding of function calling in the OpenAI Assistant API</p>
 </div>
 </a>
 </div>
@@ -233,7 +233,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function-calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704376775976" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function_calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704688569708" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html"> <img src="./posts/openai-parallel-function-calling-handson-tools/music.png" class="thumbnail-image"> </a></p>
 </div>
@@ -253,13 +253,13 @@ llm
 <div class="listing-category" onclick="window.quartoListingCategory('openai'); return false;">
 openai
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('function-calling'); return false;">
-function-calling
+<div class="listing-category" onclick="window.quartoListingCategory('function_calling'); return false;">
+function_calling
 </div>
 </div>
 <a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html">
 <div class="listing-description">
-This blog post introduces “MoodCast,” a project that leverages OpenAI’s function calling feature to create real-time, weather-based…
+<p>The blog post introduces MoodCast, a project that uses OpenAI’s parallel function calling feature to create real-time, weather-based music playlists. It integrates OpenWeather and Spotify APIs, demonstrating the power and flexibility of OpenAI’s function calling. This feature allows developers to describe a function, and the model generates a JSON output containing arguments. It doesn’t call any function itself, but generates the JSON that can be used to call a function from your code. This is a significant advancement as it allows developers to interact with AI in a more structured and systematic way, overcoming the challenges of dealing with unstructured data outputs. The blog post provides a detailed guide on how to use function calling for OpenAI’s chat completion endpoints, with MoodCast serving as a real-world example. It aims to provide valuable insights into the potential of OpenAI’s function calling feature for both seasoned developers and beginners in the field of AI</p>
 </div>
 </a>
 </div>
@@ -274,7 +274,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704375618787" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="2" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704688690747" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html"> <img src="./posts/understanding-openai-chatcompletion-model-parameters/IMG_F4CC52CE7F7F-1.jpeg" class="thumbnail-image"> </a></p>
 </div>
@@ -297,7 +297,7 @@ openai
 </div>
 <a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html">
 <div class="listing-description">
-In this notebook, we will go through different parameters in LLM that control the token generation process
+<p>Details: Dive into the intricacies of LLM token generation with our insightful notebook. We cover key parameters like temperature, top_p, frequency_penalty, and presence_penalty, examining their value ranges and OpenAI’s defaults.We highlight the generation probability using log_probs. Our comprehensive guide includes real examples to demonstrate how these settings impact the token generation process, providing a valuable resource for developers and AI enthusiasts alike</p>
 </div>
 </a>
 </div>
