--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="function calling">function calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(2)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai assistants api">openai assistants api <span class="quarto-category-count">(1)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(3)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -189,7 +189,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function calling,openai assistants api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704879297784" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704880321907" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
@@ -209,11 +209,11 @@ llm
 <div class="listing-category" onclick="window.quartoListingCategory('openai'); return false;">
 openai
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('function calling'); return false;">
-function calling
+<div class="listing-category" onclick="window.quartoListingCategory('function_calling'); return false;">
+function_calling
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('openai assistants api'); return false;">
-openai assistants api
+<div class="listing-category" onclick="window.quartoListingCategory('openai_assistants_api'); return false;">
+openai_assistants_api
 </div>
 <div class="listing-category" onclick="window.quartoListingCategory('handson'); return false;">
 handson
