--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <meta name="twitter:image-height" content="1024">
 <meta name="twitter:image-width" content="1024">
 <meta name="twitter:card" content="summary_large_image">
+<link rel="canonical" href="https://www.arunprakash.ai/index.html" />
 </head>
 
 <body class="floating nav-fixed">
@@ -189,7 +190,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704880321907" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
