--- a/about.html
+++ b/about.html
@@ -110,6 +110,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="https://www.arunprakash.ai/profile.jpg">
 <meta name="twitter:card" content="summary_large_image">
+<link rel="canonical" href="https://www.arunprakash.ai/about.html" />
 </head>
 
 <body class="floating nav-fixed">
