--- a/about.html
+++ b/about.html
@@ -104,13 +104,13 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="about.xml"><meta property="og:title" content="Explained Intuitively - About">
 <meta property="og:description" content="">
-<meta property="og:image" content="https://www.arunprakash.ai/profile.jpg">
+<meta property="og:image" content="https://arunprakash.ai/profile.jpg">
 <meta property="og:site-name" content="Explained Intuitively">
 <meta name="twitter:title" content="Explained Intuitively - About">
 <meta name="twitter:description" content="">
-<meta name="twitter:image" content="https://www.arunprakash.ai/profile.jpg">
+<meta name="twitter:image" content="https://arunprakash.ai/profile.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<link rel="canonical" href="https://www.arunprakash.ai/about.html" />
+<link rel="canonical" href="https://arunprakash.ai/about.html" />
 </head>
 
 <body class="floating nav-fixed">
