--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="index.xml"><meta property="og:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta property="og:image" content="https://www.arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
+<meta property="og:image" content="https://arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
 <meta property="og:site-name" content="Explained Intuitively">
 <meta property="og:image:height" content="1024">
 <meta property="og:image:width" content="1024">
 <meta name="twitter:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta name="twitter:image" content="https://www.arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
+<meta name="twitter:image" content="https://arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
 <meta name="twitter:image-height" content="1024">
 <meta name="twitter:image-width" content="1024">
 <meta name="twitter:card" content="summary_large_image">
-<link rel="canonical" href="https://www.arunprakash.ai/index.html" />
+<link rel="canonical" href="https://arunprakash.ai/index.html" />
 </head>
 
 <body class="floating nav-fixed">
