--- a/index.html
+++ b/index.html
@@ -104,14 +104,10 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="index.xml"><meta property="og:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta property="og:image" content="https://arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
+<meta property="og:image" content="https://arunprakash.ai/posts/personalised-news-social-media-openai-assistants-api/0_0.webp">
 <meta property="og:site-name" content="Explained Intuitively">
-<meta property="og:image:height" content="1024">
-<meta property="og:image:width" content="1024">
 <meta name="twitter:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta name="twitter:image" content="https://arunprakash.ai/posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png">
-<meta name="twitter:image-height" content="1024">
-<meta name="twitter:image-width" content="1024">
+<meta name="twitter:image" content="https://arunprakash.ai/posts/personalised-news-social-media-openai-assistants-api/0_0.webp">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="canonical" href="https://arunprakash.ai/index.html" />
 </head>
@@ -177,7 +173,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(3)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(2)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(5)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(5)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(3)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -190,7 +186,54 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705170600000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="thumbnail">
+<p><a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html"> <img src="./posts/personalised-news-social-media-openai-assistants-api/0_0.webp" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html">
+<h3 class="no-anchor listing-title">
+Morning with Jarvis: Craft Your Own News Universe from Social Media and News Digests
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('llm'); return false;">
+llm
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('openai'); return false;">
+openai
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('function_calling'); return false;">
+function_calling
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('openai_assistants_api'); return false;">
+openai_assistants_api
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('handson'); return false;">
+handson
+</div>
+</div>
+<a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html">
+<div class="listing-description">
+<p>Revolutionize your morning routine with an AI-powered tool that delivers personalized audio news briefings on your topic of interest directly to your telegram. This project uses openai assistants API, Selenium, telegram API, openai text to speech models, DuckDuckGo for search, and many more.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html">
+<div class="listing-date">
+Jan 14, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
@@ -237,7 +280,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="2" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html"> <img src="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistant.png" class="thumbnail-image"> </a></p>
 </div>
@@ -281,7 +324,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="llm,openai,function_calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="3" data-categories="llm,openai,function_calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html"> <img src="./posts/openai-parallel-function-calling-handson-tools/music.png" class="thumbnail-image"> </a></p>
 </div>
@@ -322,7 +365,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704878613312" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="4" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html"> <img src="./posts/understanding-openai-chatcompletion-model-parameters/IMG_F4CC52CE7F7F-1.jpeg" class="thumbnail-image"> </a></p>
 </div>
