--- a/index.html
+++ b/index.html
@@ -104,10 +104,14 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="index.xml"><meta property="og:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta property="og:image" content="https://arunprakash.ai/posts/personalised-news-social-media-openai-assistants-api/0_0.webp">
+<meta property="og:image" content="https://arunprakash.ai/posts/chatcompletions-vs-assistants-ai-openai/logo.png">
 <meta property="og:site-name" content="Explained Intuitively">
+<meta property="og:image:height" content="1024">
+<meta property="og:image:width" content="1024">
 <meta name="twitter:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta name="twitter:image" content="https://arunprakash.ai/posts/personalised-news-social-media-openai-assistants-api/0_0.webp">
+<meta name="twitter:image" content="https://arunprakash.ai/posts/chatcompletions-vs-assistants-ai-openai/logo.png">
+<meta name="twitter:image-height" content="1024">
+<meta name="twitter:image-width" content="1024">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="canonical" href="https://arunprakash.ai/index.html" />
 </head>
@@ -173,7 +177,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(2)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(5)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(5)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(3)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(6)</span></div><div class="category" data-category="chat_completions">chat_completions <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(3)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(6)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(6)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(4)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -186,7 +190,54 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705170600000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,openai,openai_assistants_api,chat_completions,handson" data-listing-date-sort="1705689000000" data-listing-file-modified-sort="1705719940701" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="thumbnail">
+<p><a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html"> <img src="./posts/chatcompletions-vs-assistants-ai-openai/logo.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html">
+<h3 class="no-anchor listing-title">
+OpenAI ChatCompletions vs OpenAI Assistants API: A Hands-on Comparison
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('llm'); return false;">
+llm
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('openai'); return false;">
+openai
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('openai_assistants_api'); return false;">
+openai_assistants_api
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('chat_completions'); return false;">
+chat_completions
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('handson'); return false;">
+handson
+</div>
+</div>
+<a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html">
+<div class="listing-description">
+<p>Assistants API offers advanced features like conversation threading, code execution, and data retrieval, ideal for complex AI applications. In contrast, Chat Completion Models are lightweight and efficient, ideal for simple AI applications.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html">
+<div class="listing-date">
+Jan 20, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705170600000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html"> <img src="./posts/personalised-news-social-media-openai-assistants-api/0_0.webp" class="thumbnail-image"> </a></p>
 </div>
@@ -233,7 +284,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="2" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704825000000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
@@ -280,7 +331,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="3" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704393000000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html"> <img src="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistant.png" class="thumbnail-image"> </a></p>
 </div>
@@ -324,7 +375,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="llm,openai,function_calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="4" data-categories="llm,openai,function_calling" data-listing-date-sort="1704220200000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html"> <img src="./posts/openai-parallel-function-calling-handson-tools/music.png" class="thumbnail-image"> </a></p>
 </div>
@@ -365,7 +416,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="5" data-categories="llm,openai" data-listing-date-sort="1702751400000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html"> <img src="./posts/understanding-openai-chatcompletion-model-parameters/IMG_F4CC52CE7F7F-1.jpeg" class="thumbnail-image"> </a></p>
 </div>
